# local-ai-agent-orchestrator

./: .env.example  .gitignore  CHANGELOG.md  README.md  factory.example.yaml  main.py  pyproject.toml  requirements.txt
.github/workflows/: deploy-pages.yml  publish-pypi.yml
docs/: ARCHITECTURE.md  CNAME  CONFIGURATION.md  CONTRIBUTING.md  PYPI_PUBLISH.md  index.html  install.sh  lao_vnext_strict_orchestration_plan.md
plans/: README.md  example_plan.md
scripts/: install.sh
site/: index.html
src/local_ai_agent_orchestrator/: __init__.py  analyst.py  analyzers.py  benchmarks.py  branding.py  cli.py  consistency.py  console_ui.py  contract_author.py  critic_quorum.py  dashboards.py  doctor.py  done_gate.py  history.py  hooks_registry.py  ideation.py  interactive_ui.py  interrupts.py  kpi.py  model_manager.py  permissions.py  phases.py  pilot.py  pilot_tools.py  pilot_ui.py  plan_git.py  plan_integrator.py  project_registry.py  prompts.py  repair.py  report_schema.py  reporting.py  runner.py  schema_lints.py  settings.py  spec_doctor.py  state.py  tools.py  unified_ui.py  validators.py  (+2 more)
src/local_ai_agent_orchestrator/services/: __init__.py  acceptance.py  compact.py  extract_memories.py  mcp_client.py  mcp_server.py  memory.py  otel.py
src/local_ai_agent_orchestrator/skills/: __init__.py
src/local_ai_agent_orchestrator/skills/bundled/: refactor_safe.md  repro_bug.md  security_audit.md  simplify.md  stuck.md  verify.md  write_tests.md
src/local_ai_agent_orchestrator/tools/: __init__.py  base.py  fs.py  memory_tools.py  meta.py  plan_mode.py  search.py  shell.py  skills_tools.py  subagent.py  todos.py
tests/: __init__.py  test_analyzers.py  test_architect_schema.py  test_benchmarks.py  test_cli_interactive.py  test_coder_inner_repair.py  test_compact.py  test_contract_author.py  test_critic_quorum.py  test_dashboards.py  test_done_gate.py  test_history.py  test_ideation_spec_doctor.py  test_interrupts.py  test_kpi.py  test_memory.py  test_permissions.py  test_phase_confidence.py  test_pilot.py  test_pilot_tools.py  test_plan_git.py  test_plan_integrator.py  test_plan_mode.py  test_project_registry.py  test_prompts.py  test_repair.py  test_report_schema.py  test_reporting_v2.py  test_scheduler_and_chunks.py  test_skills.py  test_state_db.py  test_tool_contract.py  test_unified_ui.py  test_validators.py  test_verifier_phase.py  test_workspace.py
