[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "local-ai-agent-orchestrator"
version = "3.0.4"
description = "Local AI Agent Orchestrator: planner, coder, reviewer, and interactive pilot agents over LM Studio with SQLite state, optional per-plan Git commits, and memory-safe model swapping"
readme = "README.md"
license = "GPL-3.0-only"
requires-python = ">=3.10"
authors = [{ name = "Local AI Agent Orchestrator contributors" }]
keywords = ["llm", "lm-studio", "agents", "orchestration", "local-ai", "coding-agent"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "openai>=1.0",
    "prompt_toolkit>=3.0",
    "questionary>=2.0",
    "requests>=2.28",
    "rich>=13.0",
    "tiktoken>=0.5",
    "watchdog>=3.0",
    "pyyaml>=6.0",
]

[project.scripts]
lao = "local_ai_agent_orchestrator.cli:main"
local-ai-agent-orchestrator = "local_ai_agent_orchestrator.cli:main"

[project.urls]
Homepage = "https://lao.keyhan.info"
Repository = "https://github.com/KEYHAN-A/local-ai-agent-orchestrator"
Documentation = "https://lao.keyhan.info"
"Source Code" = "https://github.com/KEYHAN-A/local-ai-agent-orchestrator"
"Issue Tracker" = "https://github.com/KEYHAN-A/local-ai-agent-orchestrator/issues"

[tool.setuptools.packages.find]
where = ["src"]
